--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -30,3 +30,14 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  weather_api_key: c391db3a2a98fb5a
+  google_api_key: AIzaSyD-7NSPt2Gzjn79uQ-NoKl7xGKc0oO4H54
+  facebook_api_key:  952135701508696 
+  facebook_api_secret: c8023d0c1ff4c876ee7959b2420f85dd
+  google_api_key:  645573209535-on03jvng731shtk814jdof5mp269btsr.apps.googleusercontent.com
+  google_api_secret: I6yBWWDiAwoYErX0zho3GoS7
+  linkedin_api_key: 77e39s7qucn8p4
+  linkedin_api_secret: HO0P0HXaTK2MZlYR
+  github_api_key: 175ab9574c9c7d27e9b0
+  github_api_secret: 984ed777f7b1d90f935b1879d3e8b05f53286b70
+
