--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -32,8 +32,8 @@ production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   weather_api_key: <%= ENV["WEATHER_API_KEY"] %>
   google_api_key: <%= ENV["GOOGLE_API_KEY"] %>
-  facebook_api_key:  <%= ENV["FACEBOOK_API_KEY"] %> 
-  facebook_api_secret: <%= ENV["FACEBOOK_API_SECRET"] %>
+  facebook_api_key:  1083405378344836
+  facebook_api_secret: ff60f61e2badeca03f0fdf1354ab8f17
   google_api_key:  645573209535-on03jvng731shtk814jdof5mp269btsr.apps.googleusercontent.com
   google_api_secret: I6yBWWDiAwoYErX0zho3GoS7
   linkedin_api_key: 77e39s7qucn8p4
